# brainstorm-ai

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONFIG_README.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOUVEAUTES_COUTS.md  OPTIMIZATIONS.md  PROGRESS_SYSTEM.md  QUICK_START.md  README.md  benchmark_optimizations.py  config.yaml  cursor.rules  debug_config.py  demo_progression.py  docker-compose.yml  main.py  pyproject.toml  quick_start.bat  requirements-dev.txt  requirements.txt  run.py  setup.py  start.bat  test.json  test.md  test.yaml  test_config.py  test_export_fix.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.windsurf/rules/: testprojectrules.md
.windsurf/workflows/: workflowpytest.md
agents/: __init__.py  agent_application.py  agent_creatif.py  agent_critique.py  agent_revision.py  agent_score.py  agent_synthese.py  base_agent.py
config/: README.md  config.yaml  env.example  mkdocs.yml  prompts.yaml
config/python/: pyproject.toml  tox.ini
core/: config.py  gpt.py  loop_manager.py  progress_tracker.py  types.py
data/: README.md
data/exports/: 3_2____Syst_me_de_Transports_en_Commun_Par.txt  4_3____Biblioth_ques_Urbaines_de_Capteurs.txt  4_Encourager_la_cr_ation_de_communaut_s_d.txt  example_idees_innovantes.txt
data/exports/exports/: 3_En_plus_des_traductions_multilingues__vo.txt  5_Inclure_des_ateliers_de_co-cr_ation_avec.txt
data/logs/: brainstorm_2025-06-18_17-25-51.yaml  brainstorm_2025-06-18_17-27-14.yaml  brainstorm_2025-06-18_17-27-43.yaml  brainstorm_2025-06-18_18-02-16.yaml  brainstorm_2025-06-19_05-48-44.md  brainstorm_2025-06-19_14-12-09.md  brainstorm_2025-06-19_20-47-04.md  brainstorm_2025-06-19_22-27-21.md  brainstorm_2025-06-19_22-30-16.md  example_brainstorm_session.yaml
data/logs/logs/: brainstorm_2025-06-18_17-26-38.yaml
docker/: Dockerfile
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIG_README.md  CORRECTIONS_BUGS.md  PROGRESS_SYSTEM.md  cursor.rules  index.md
docs/guides/: PRESENTATION_PROJETS.md  PRIVACY_GUIDELINES.md  VERSIONING.md
docs/project/: ARCHITECTURE.md  CHANGELOG.md  CORRECTIONS_BUGS.md  CORRECTION_CORRELATION_CONFIG.md  SIMPLIFICATION_DOCKER.md
docs/technical/: SYSTEM_FLOW.md
exports/: 1_Ces_trois_id_es_pr_sentent_des_approches.txt  1_Vous_pourriez_envisager_d_int_grer_des_t.txt  2_1____R_seau_de_Capteurs_Communautaires_p.txt  2_Il_serait__galement_utile_de_d_finir_des.txt  5_Dans_l_ensemble__ces_trois_propositions.txt
logs/: brainstorm_2025-06-18.yaml  brainstorm_2025-06-18_17-25-19.yaml
scripts/: .gitignore  README.md  __init__.py  benchmark_optimizations.py  bump_version.ps1  check_config.py  cleanup.py  debug_config.py  demo_progression.py  generate_project_index.py  generate_requirements.py  run_quick_start.py  test_config.py  test_config_correlation.py  test_export_fix.py
src/: README.md  main.py
src/agents/: agent_application.py  agent_creatif.py  agent_revision.py  agent_score.py
src/brainstorm_ai/: __init__.py
src/brainstorm_ai/agents/: __init__.py  application.py  base.py  creative.py  critic.py  revision.py  score.py  synthesis.py
src/brainstorm_ai/cli/: __init__.py  main.py
src/brainstorm_ai/core/: __init__.py  config.py  exporter.py  gpt.py  loop_manager.py  progress_tracker.py  types.py  utils.py
src/core/: __init__.py  config.py
tests/: README.md  conftest.py  test_agent_application.py  test_agent_creatif.py  test_agent_critique.py  test_agent_revision.py  test_agent_score.py  test_agent_synthese.py  test_basic.py  test_export_fix.py  test_exporter.py  test_loop_manager.py  test_utils.py
tests/integration/: __init__.py  test_brainstorm_flow.py
tests/unit/agents/: test_application.py  test_creative.py  test_critic.py  test_revision.py  test_score.py  test_synthesis.py
tests/unit/core/: test_config.py  test_exporter.py  test_gpt.py  test_loop_manager.py  test_utils.py
